--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ setuptools~=56.0.0
 testinfra==5.0.0
 jq==1.1.2; platform_system == "Linux" or platform_system == "Darwin"
 cryptography==3.3.2; platform_system == "Linux" or platform_system == "Darwin" or platform_system=='Windows'
-urllib3
+urllib3==1.0.0
 numpydoc>=1.1.0
 ansible-runner>=2.0.1 ; platform_system == "Linux"
 docker>=5.0.0 ; platform_system == "Linux" or platform_system=='Windows'
